// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoliHouse > should parse 1`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[LoliHouse] 肌肉魔法使-MASHLE- / Mashle - 02 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "肌肉魔法使-MASHLE- / Mashle",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 2`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": undefined,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[LoliHouse] 赤色光弹Zillion / Akai Koudan Zillion [BDRip 720p HEVC-10bit AAC]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "BDRip",
  "subtitles": undefined,
  "title": "赤色光弹Zillion / Akai Koudan Zillion",
  "type": undefined,
  "video": {
    "resolution": "720p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 3`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 10,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌Production&LoliHouse] UniteUp! 众星齐聚 - 10 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "UniteUp! 众星齐聚",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 4`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[豌豆字幕组&风之圣殿字幕组&LoliHouse] 新石纪 第三季 / 石纪元 第三季 / Dr.STONE S3 - 02 [WebRip 1080p HEVC-10bit AAC][简繁外挂字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": "3",
  "source": "WebRip",
  "subtitles": undefined,
  "title": "新石纪 第三季 / 石纪元 第三季 / Dr STONE S3",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 5`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌Production&LoliHouse] 偶像大师 灰姑娘女孩 U149 / THE IDOLM@STER CINDERELLA GIRLS U149 - 02 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "偶像大师 灰姑娘女孩 U149 / THE IDOLM@STER CINDERELLA GIRLS U149",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 6`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 跃动青春 / Skip to Loafer - 02 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "跃动青春 / Skip to Loafer",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 7`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": 12,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[动漫国字幕组&LoliHouse] 关于我在无意间被隔壁的天使变成废柴这件事 / Otonari no Tenshi-sama [01-12 修正合集] [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "关于我在无意间被隔壁的天使变成废柴这件事 / Otonari no Tenshi-sama",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 8`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 放学后失眠的你 / Kimi wa Houkago Insomnia - 01 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "放学后失眠的你 / Kimi wa Houkago Insomnia",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 9`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 勇者死了！/ Yuusha ga Shinda! - 01 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "勇者死了！/ Yuusha ga Shinda!",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 10`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[动漫国字幕组&LoliHouse] 魔法使的新娘 第二季 / Mahou Tsukai no Yome S2 - 01 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": "2",
  "source": "WebRip",
  "subtitles": undefined,
  "title": "魔法使的新娘 第二季 / Mahou Tsukai no Yome S2",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 11`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[动漫国字幕组&LoliHouse] 为美好的世界献上爆焰! / Kono Subarashii Sekai ni Bakuen wo! - 01 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "为美好的世界献上爆焰! / Kono Subarashii Sekai ni Bakuen wo!",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 12`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 与山田谈一场Lv999的恋爱 / Yamada-kun to Lv999 no Koi wo Suru - 02 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "与山田谈一场Lv999的恋爱 / Yamada-kun to Lv999 no Koi wo Suru",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 13`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 12,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[悠哈璃羽字幕社&LoliHouse] 冰属性男子与无表情女子 / Koori Zokusei Danshi to Cool na Douryou Joshi - 12 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕][END]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "冰属性男子与无表情女子 / Koori Zokusei Danshi to Cool na Douryou Joshi",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 14`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 12,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[悠哈璃羽字幕社&LoliHouse] 不相信人类的冒险者们好像要去拯救世界 / Ningen Fushin - 12 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕][END]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "不相信人类的冒险者们好像要去拯救世界 / Ningen Fushin",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 15`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[LoliHouse] 亡骸游戏 / 尸体如山的死亡游戏 / Dead Mount Death Play - 01 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "亡骸游戏 / 尸体如山的死亡游戏 / Dead Mount Death Play",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 16`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 女神咖啡厅 / 女神的露天咖啡厅 / Megami no Cafe Terrace - 01 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "女神咖啡厅 / 女神的露天咖啡厅 / Megami no Cafe Terrace",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 17`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌Production&LoliHouse] 世界大明星 / World Dai Star - 01 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "世界大明星 / World Dai Star",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 18`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 转生贵族的异世界冒险录 ~不知克制的众神的使徒~ / Tensei Kizoku no Isekai Boukenroku - 02 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "转生贵族的异世界冒险录 ~不知克制的众神的使徒~ / Tensei Kizoku no Isekai Boukenroku",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 19`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 45,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[豌豆字幕组&风之圣殿字幕组&LoliHouse] 鬼灭之刃 刀匠村篇 01(45) / Kimetsu no Yaiba - 45 [WebRip 1080p HEVC-10bit AAC][简繁外挂字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "鬼灭之刃 刀匠村篇 01",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 20`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 27,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[动漫国字幕组&LoliHouse] 伊甸星原 / EDENS ZERO - 27 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "伊甸星原 / EDENS ZERO",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 21`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 我内心的糟糕念头 / Boku no Kokoro no Yabai Yatsu - 02 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "我内心的糟糕念头 / Boku no Kokoro no Yabai Yatsu",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 22`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 13,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[喵萌奶茶屋&LoliHouse] 机动战士高达 水星的魔女 / Mobile Suit Gundam THE WITCH FROM MERCURY - 13 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "机动战士高达 水星的魔女 / Mobile Suit Gundam THE WITCH FROM MERCURY",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 23`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 1,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[LoliHouse] 第二次被异世界召唤 / 異世界召喚は二度目です / Isekai Shoukan wa Nidome desu - 01 [WebRip 1080p HEVC-10bit AAC][简繁内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "第二次被异世界召唤 / 異世界召喚は二度目です / Isekai Shoukan wa Nidome desu",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;

exports[`LoliHouse > should parse 24`] = `
{
  "audio": {
    "term": "AAC",
  },
  "episode": {
    "number": 2,
    "numberAlt": undefined,
    "title": undefined,
  },
  "file": {
    "checksum": undefined,
    "extension": undefined,
    "name": "[SweetSub&LoliHouse] 天国大魔境 / Tengoku Daimakyou - 02 [WebRip 1080p HEVC-10bit AAC][简繁日内封字幕]",
  },
  "language": undefined,
  "month": undefined,
  "release": {
    "group": "LoliHouse",
    "version": undefined,
  },
  "season": undefined,
  "source": "WebRip",
  "subtitles": undefined,
  "title": "天国大魔境 / Tengoku Daimakyou",
  "type": undefined,
  "video": {
    "resolution": "1080p",
    "term": "HEVC-10bit",
  },
  "volume": {
    "number": undefined,
  },
  "year": undefined,
}
`;
